--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -199,8 +199,9 @@
     
     td,th{
         white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis
+        /* overflow: hidden; */
+        text-overflow: ellipsis;
+        text-align: center;
     }
     
     
