--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,3 +6,8 @@
 .daterangepicker .calendar th, .daterangepicker .calendar td {
     width: 32px;
 }
+.modal-content {
+    border-radius: 5px;
+    -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.125);
+    box-shadow: 0 2px 3px rgba(0,0,0,0.125);
+}
