--- a/src/pages/alarm_detail/alarm_detail.css
+++ b/src/pages/alarm_detail/alarm_detail.css
@@ -43,3 +43,16 @@
 .alarm_detail .img_arrow{
     margin-top: 60px
 }
+.alarm_detail .part{
+   padding: 10px 30px;
+}
+.alarm_detail .part .part_detail{
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+}
+.alarm_detail .part p{
+    margin: 5px 0;
+}
+.alarm_detail .part_detail_span{
+   padding-left: 15px;
+}
