--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -1,18 +1,19 @@
-    .overview{
+    .overview {
         width: 100%;
         /* border: 1px solid #ff0000; */
         /* padding: 10px; */
     }
-    .row{
+
+    .row {
         margin: 0;
     }
+
     .o_container {
         padding: 0 5px;
-    
     }
-    
+
     /* 公共部分 */
-    
+
     .o_box_header {
         height: 40px;
         line-height: 40px;
@@ -21,6 +22,7 @@
         font-weight: 700;
         border-bottom: 1px solid #ddd;
     }
+
     .o_frist,
     .o_sed,
     .o_third,
@@ -29,38 +31,42 @@
         padding-left: 10px;
         padding-right: 10px;
     }
+
     .system,
     .flow,
     .equipment,
     .target,
     .untreated,
     .alarm,
-    .top{
+    .top {
         padding: 0 5px;
         background-color: #fff;
         border-radius: 5px;
         border-top: 3px solid #d2d6de;
-        box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     }
+
     #sys,
-    #target_port,  
+    #target_port,
     #untreatedalarm,
-    #alarm_number{
+    #alarm_number,
+    #threaten_type {
         padding: 10px;
         width: 100%;
         height: 200px;
-        /* border: 1px solid #ddd; */
     }
+
     #top10,
-    #new{
+    #new {
         padding: 10px;
         width: 100%;
-        height:235px;
+        height: 235px;
     }
-    
+
     /* 第一排---------- */
-    
+
     /* 系统健康图表 */
+
     .box-block-red {
         width: 20px;
         height: 12px;
@@ -68,7 +74,7 @@
         display: inline-block;
         background-color: rgba(214, 72, 71, .8);
     }
-    
+
     .box-block-green {
         display: inline-block;
         border-radius: 2px;
@@ -76,7 +82,7 @@
         width: 20px;
         height: 12px;
     }
-    
+
     .box-block-gray {
         display: inline-block;
         border-radius: 2px;
@@ -84,36 +90,35 @@
         width: 20px;
         height: 12px;
     }
-    
+
     .box-sed-left-left {
         padding-top: 10px;
         /* border: 1px solid #666; */
     }
-    
-    .box-sed-left-left-info{
-        white-space:nowrap;
+
+    .box-sed-left-left-info {
+        white-space: nowrap;
     }
+
     .box-sed-left-span {
         text-align: center;
         margin-left: 10px;
         cursor: pointer;
     }
-    
-    
+
     /* 日志信息 */
-    
+
     #flowinfo {
         width: 100%;
         height: 100px;
     }
-    
+
     #flowtotal {
         width: 100%;
         height: 100px;
     }
-    
-    
-    .flow-color2{
+
+    .flow-color2 {
         display: inline-block;
         width: 20px;
         height: 10px;
@@ -121,7 +126,8 @@
         margin-right: 5px;
         background-color: rgb(75, 106, 37);
     }
-    .flow-color3{
+
+    .flow-color3 {
         display: inline-block;
         width: 20px;
         height: 10px;
@@ -129,63 +135,69 @@
         background-color: rgb(186, 75, 72);
         margin-right: 5px;
     }
-    .flow-item{
+
+    .flow-item {
         position: relative;
         margin: 10px 0;
     }
-    .flow-num{
+
+    .flow-num {
         position: absolute;
         left: 110px;
         top: 0;
     }
+
     /* 安全设备 */
-    #safetyequipment{
+
+    #safetyequipment {
         width: 100%;
         height: 237px;
     }
+
     .equipment-right {
         padding: 0;
-
         /* border: 1px solid #ddd; */
     }
-    .equipment-left-info{
-        white-space:nowrap;
+
+    .equipment-left-info {
+        white-space: nowrap;
     }
-    
-    
-    
+
     /* 第三排 */
-    
-    /* 风险资产 */
-    
-    /* .untreated-content {
-        height: 400px;
-        
-    } */
-    
+
+    #top5 {
+        padding: 10px;
+        width: 100%;
+        height: 235px;
+    }
+
     /* 第四排 */
-    .bg-success{
-       
-       
+
+    .bg-success {
         border-radius: 10px;
     }
-    .bg-color1{
+
+    .bg-color1 {
         background-color: #F90504;
     }
-    .bg-color2{
+
+    .bg-color2 {
         background-color: #F93B04;
     }
-    .bg-color3{
+
+    .bg-color3 {
         background-color: #FE690B;
     }
-    .bg-color4{
+
+    .bg-color4 {
         background-color: #FCB503;
     }
-    .bg-color5{
+
+    .bg-color5 {
         background-color: #F9ED04
     }
-    
-    .more{
+
+    .more {
         color: #666;
         display: inline-block;
         font-size: 28px;
@@ -193,33 +205,36 @@
         right: 10px;
         top: 0;
     }
-    table{
+
+    table {
         table-layout: fixed;
     }
-    
-    td,th{
+
+    td,
+    th {
         white-space: nowrap;
         /* overflow: hidden; */
         text-overflow: ellipsis;
         text-align: center;
     }
-    
-    
+
     /* 弹窗 */
-    .pop{
+
+    .pop {
         /* display: none; */
         position: fixed;
         top: 0;
         left: 0;
         bottom: 0;
         left: 0;
-        width:100%;
+        width: 100%;
         height: 100%;
-        background-color: rgba(48, 46, 46,.5);
+        background-color: rgba(48, 46, 46, .5);
         border-radius: 10px;
         z-index: 66;
     }
-    .pop-content{
+
+    .pop-content {
         padding: 10px;
         position: absolute;
         width: 800px;
@@ -228,35 +243,85 @@
         border-radius: 10px;
         left: 50%;
         top: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         z-index: 666;
     }
-    .pop-content-head{
+
+    .pop-content-head {
         font-size: 20px;
         font-weight: 700;
         height: 40px;
         border-bottom: 1px solid #ddd;
         line-height: 40px;
     }
-    
-    .progress,.progress-bar{
+
+    /* iot pop */
+
+    .iot_pop {
+        /* display: none; */
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(48, 46, 46, .5);
+        border-radius: 10px;
+        z-index: 700;
+    }
+
+    .iot_pop_content {
+        padding: 10px;
+        position: absolute;
+        width: 800px;
+        background-color: #fff;
+        border-radius: 10px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 999;
+    }
+
+    .iot_pop_content_head {
+        font-size: 20px;
+        font-weight: 700;
+        height: 40px;
+        border-bottom: 1px solid #ddd;
+        line-height: 40px;
+    }
+
+    .progress,
+    .progress-bar {
         height: 15px;
     }
-    .sys-chart{
+
+    .sys-chart {
         width: 100%;
         height: 400px;
         /* border: 1px solid red; */
     }
+
     #topology {
         width: 100%;
         height: 400px;
     }
 
-    #logrythm_left,#logrythm_right{
+    #logrythm_left,
+    #logrythm_right {
         width: 100%;
         height: 400px;
     }
-    #graph{
+
+    #graph,
+    #iot_detail {
         width: 100%;
         height: 400px;
+    }
+
+    .closed {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
     }
