--- a/src/pages/set_email/set_email.css
+++ b/src/pages/set_email/set_email.css
@@ -1,7 +1,6 @@
 .email_item{
-    padding: 10px;
+    padding: 10px 30px;
     font-size: 16px;
-    /* border: 1px solid red; */
 }
 .email_item_header{
     padding-bottom: 5px;
