--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -1,7 +1,5 @@
     .overview {
         width: 100%;
-        /* border: 1px solid #ff0000; */
-        /* padding: 10px; */
     }
 
     .row {
@@ -73,7 +71,6 @@
         border-radius: 2px;
         display: inline-block;
         background-color: rgba(214, 72, 71, .8);
-        
     }
 
     .box-block-green {
@@ -314,7 +311,9 @@
         width: 100%;
         height: 400px;
     }
-    #iot_detail_top,#iot_detail_bom{
+
+    #iot_detail_top,
+    #iot_detail_bom {
         width: 100%;
         height: 200px;
     }
@@ -325,7 +324,8 @@
         right: 20px;
         cursor: pointer;
     }
-    .err_info_header{
+
+    .err_info_header {
         color: #F90504;
         line-height: 34px;
     }
