--- a/src/css/zeroModal.css
+++ b/src/css/zeroModal.css
@@ -7,8 +7,8 @@
 
 .zeromodal-overlay {
     width: 100%;
-    height: 1000px;
-    position: absolute;
+    height: 100%;
+    position: fixed;
     z-index: 1000;
     opacity: 0.2;
     background-color: rgba(0, 0, 0, .4);
