ip url 文件调查接口

--- a/src/pages/set_rule/set_rule.css
+++ b/src/pages/set_rule/set_rule.css
@@ -30,3 +30,10 @@ input[type='file'] {
     display: none;
 }
 
+.upload_button{
+    height: 25px;
+    font-size: 10px;
+    line-height: 25px;
+    padding: 0;
+    width: 70px;
+}
