流量方向及大小时长接口对接

--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -70,7 +70,7 @@
         height: 10px;
         border-radius: 2px;
         display: inline-block;
-        background-color: rgba(214, 72, 71, .8);
+        background-color: rgba(150,33,22,.8);
     }
 
     .box-block-green {
