总览引擎流量，告警详情，yara规则，网络设置，白名单，用户调查，主机调查 未连调

--- a/src/pages/reportform/reportform.css
+++ b/src/pages/reportform/reportform.css
@@ -99,7 +99,7 @@
 .echarts{
     display: none;
 }
-#untreatedalarm_report {
+#untreatedalarm_report,#application_protocol,#alert_trend,#alert_type{
     width: 1000px;
     height: 600px;
 }
