--- a/src/css/common.css
+++ b/src/css/common.css
@@ -11,3 +11,9 @@
     -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.125);
     box-shadow: 0 2px 3px rgba(0,0,0,0.125);
 }
+.btn_style{
+    /* min-width: 80px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0px */
+}
