--- a/src/pages/alarm_detail/alarm_detail.css
+++ b/src/pages/alarm_detail/alarm_detail.css
@@ -76,10 +76,8 @@
     display: inline-block;
 }
 
-
-
-
 /*横向时间轴*/
+
 .time-horizontal {
     list-style-type: none;
     border-top: 1px dashed #707070;
@@ -87,6 +85,7 @@
     max-width: 1000px;
     margin-top: 60px;
 }
+
 .time-horizontal li {
     float: left;
     position: relative;
@@ -94,7 +93,7 @@
     width: 100px;
     padding-top: 7px;
 }
- 
+
 .time-horizontal li b:before {
     content: '';
     position: absolute;
@@ -106,7 +105,8 @@
     border-radius: 12px;
     background: #999;
 }
-.time_content{
+
+.time_content {
     border-radius: 10px;
     padding: 10px;
     margin-top: 80px;
@@ -114,24 +114,29 @@
     background: #F4F3F4;
 }
 
-ul,li{
-    list-style-type:none;
+ul,
+li {
+    list-style-type: none;
 }
-.time_content_li{
+
+.time_content_li {
     height: 34px;
     line-height: 34px;
 }
-.time_content_span_title{
+
+.time_content_span_title {
     display: inline-block;
     width: 105px;
     margin-right: 10px;
 }
-.li_hover:hover{
+
+.li_hover:hover {
     color: #3c8dbc;
     cursor: pointer;
     /* font-size: 14px; */
 }
-.li_hover:hover b:before{
+
+.li_hover:hover b:before {
     top: -10px;
     left: 38%;
     width: 20px;
@@ -140,18 +145,21 @@ ul,li{
     border-radius: 18px;
     background: #3c8dbc;
 }
-.li_top{
+
+.li_top {
     position: absolute;
     top: -35px;
     left: 0px;
     width: 100px;
     text-align: center
 }
-.li_active{
+
+.li_active {
     color: #3c8dbc;
     /* font-size: 14px; */
- }
- .li_active b:before{
+}
+
+.li_active b:before {
     top: -10px !important;
     left: 38% !important;
     width: 20px !important;
@@ -159,4 +167,11 @@ ul,li{
     border: 2px solid #3c8dbc !important;
     border-radius: 18px !important;
     background: #3c8dbc !important;
- }
+}
+
+
+.class{
+    color: rgba(255,128,0,1);
+    color: rgba(0,0,255,1);
+    color: rgba(128,0,255,1);
+}
