--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -149,7 +149,7 @@
 
     #safetyequipment {
         width: 100%;
-        height: 237px;
+        height: 210px;
     }
 
     .equipment-right {
@@ -328,4 +328,13 @@
     .err_info_header {
         color: #F90504;
         line-height: 34px;
+    }
+    .new_alert{
+        min-width: 605px;
+    }
+    .new_top_left{
+        max-width: 291px;
+    }
+    .new_top_mid{
+        max-width: 337px;
     }
