--- a/src/pages/signin/signin.css
+++ b/src/pages/signin/signin.css
@@ -3,14 +3,15 @@
     margin-top: 100px;
     font-size: 25px;
     /* margin-bottom: 15px; */
-    padding: 0 10px;
+    padding: 0 ;
     font-family: SimHei;
-    font-size: 26px;
+    font-size: 25px;
     font-weight: 700;
+    width: 330px;
 }
 .head_subtitle{
     font-family: Arial;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
     margin-bottom: 70px;
     text-align: center;
